# Equion

./: .gitignore  README.md  api.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf  package-lock.json  package.json
.github/workflows/: server.yml
axiom/: Dockerfile  docker-entrypoint.sh  gatsby-config.ts  package-lock.json  package.json
axiom/src/pages/: index.tsx  svg.tsx
axiom/src/styles/: _colours.scss  _features.scss  _footer.scss  (+4 more)
bijection/: package-lock.json  package.json  tsconfig.json
bijection/src/: events.ts  index.ts  rpc.ts  types.ts
docs/: api.md  book.toml  message.md
docs/src/: SUMMARY.md  introduction.md  message.md
domain/: Cargo.toml  Dockerfile  schema.sql
domain/migrations/: 20220614-add-invites.sql
domain/src/: auth.rs  main.rs  messages.rs  sets.rs  status.rs  subscriptions.rs  user.rs  util.rs
matrix/: Cargo.toml  Dockerfile
matrix/cli/: Cargo.toml
matrix/server/: Cargo.toml
matrix/src/: main.rs  platform.rs  schema.rs
range/: .eslintrc.json  package-lock.json  package.json
range/public/: index.html
range/src/: App.tsx  OnlineApp.tsx  index.tsx  servers.json  types.d.ts
range/src-tauri/: Cargo.toml  tauri.conf.json
range/src-tauri/src/: commands.rs  main.rs
src/: App.tsx  index.tsx  types.d.ts
src-tauri/: tauri.conf.json
src/api/: Api.ts
src/components/: Message.tsx  MessageBox.tsx  Messages.tsx  SetIcon.tsx  Sets.tsx  Subset.tsx  Subsets.tsx  Titlebar.tsx
src/styles/: App.css  Message.scss  MessageBox.scss  Messages.scss  SetIcon.scss  Subsets.scss  index.css  index.scss
(+196 files in other folders)
