[package]
name = "app"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.3", features = ["api-all", "icon-ico", "icon-png", "system-tray", "updater"] }
base64 = "^0.13.0"
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", rev = "4e014f28767f69d097b59e1b40ca3384d94b0029"}

# Patch for https://github.com/tauri-apps/tao/issues/471, will be fixed at some point
[patch.crates-io]
tao = { git = "https://github.com/tauri-apps/tao", rev = "ab2e57e9ec056861fa772262a2128c2ac2e16d1b" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
